# bazelisk-task

./: .gitignore  README.md  WORKSPACE.bazel  package.json
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/my-python-app/: BUILD.bazel  main.py
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
