load("@python_deps//:requirements.bzl", "requirement")
load("@io_bazel_rules_docker//python3:image.bzl", py_image="py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
#load("@io_bazel_rules_docker//container:image.bzl", "container_image")

py_library(
  name = "main",
  srcs = ["main.py"],
  deps = [
    "//projects/calculator:calculator",
    requirement("Flask")
  ]
)

py_binary(
  name = "python_web",
  srcs = ["main.py"],
  main = "main.py",
  deps = [":main"],
)

py_image(
    name = "python_web_image",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main"],
)

#container_image(
#  name = "python_web_new_image",
#)

container_push(
  name = "publish",
  image = "bazel/projects/my-python-app",
  format = "Docker",
  registry = "registry.hub.docker.com",
  repository = "ayushrusia/python_web_image",
  tag = "v1",
)